unpackaged/main/default/objects/SpringCM_REST_Environmental__c/SpringCM_REST_Environmental__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SpringCM REST Environmentals</label>
</CustomObject>