unpackaged/main/default/objects/SpringCM_REST_Environmental__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <externalId>true</externalId>
    <label>API Key</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>