unpackaged/main/default/objects/SpringCM_REST_Environmental__c/fields/Auth_URL__c.field-meta.xml
<CustomField>
    <fullName>Auth_URL__c</fullName>
    <label>Auth URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>