unpackaged/main/default/objects/SpringCM_REST_Environmental__c/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <label>Base URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>