unpackaged/main/default/objects/SpringCM_REST_Environmental__c/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <externalId>true</externalId>
    <label>Client Secret</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>